--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -30,16 +30,21 @@
     display: none;
 }
 
+li.activate a{
+    color: orange;
+}
+
 @media screen and (max-width:1024px){
     .nav-menu{
         flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 100%;
+        height: 100vh;
+        padding: 20px;
         background-color: rgba(0,0,0,0.9);
         position: absolute;
-        top: 0;
+        top: 0px;
         left: -100%;
         transition: 0.4s ease-in;
         z-index: -3;
