--- a/src/components/FooterStyles.css
+++ b/src/components/FooterStyles.css
@@ -2,6 +2,14 @@
     width: 100%;
     background-color: rgba(19,19,19,0.8);
     padding: 6rem 0;
+     opacity: 0;
+  transform: translateY(10px);
+  transition: opacity 0.5s, transform 0.5s;
+}
+
+.footer.visible{
+    opacity: 1;
+  transform: translateY(0);
 }
 
 .footer-container{
