--- a/src/components/AboutContentStyles.css
+++ b/src/components/AboutContentStyles.css
@@ -6,6 +6,14 @@
     flex-wrap: wrap;
     height: 100%;
     margin: 3rem 0;
+    opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.5s, transform 0.5s;
+}
+
+.about.visible{
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .about .left{
