--- a/src/components/FooterStyles.css
+++ b/src/components/FooterStyles.css
@@ -3,7 +3,7 @@
     background-color: rgba(19,19,19,0.8);
     padding: 6rem 0;
      opacity: 0;
-  transform: translateY(10px);
+  transform: translateY(0);
   transition: opacity 0.5s, transform 0.5s;
 }
 
